Multiplying the NPK column..still not sure if I should yet

--- a/MegaCrop2pro_v3-multiplier.html
+++ b/MegaCrop2pro_v3-multiplier.html
@@ -689,19 +689,19 @@ function myFunction1() {
     document.getElementById("total").innerHTML = ((y*37*10 + z*34.5*10)*multi).toFixed(4);
 
 //NPK	
-	document.getElementById("nit1").innerHTML = ((y1*5 + z1*15.5)/(y1 + z1)).toFixed(3);
-	document.getElementById("p1").innerHTML = ((y1*13 + z1*0)/(y1 + z1)).toFixed(3);
-    document.getElementById("k1").innerHTML = ((y1*26 + z1*0)/(y1 + z1)).toFixed(3);
-    document.getElementById("mg1").innerHTML = ((y1*6.28 + z1*0)/(y1 + z1)).toFixed(3);
-    document.getElementById("ca1").innerHTML = ((y1*0 + z1*19)/(y1 + z1)).toFixed(3);
-    document.getElementById("s1").innerHTML = ((y1*7.3 + z1*0)/(y1 + z1)).toFixed(3);
-    document.getElementById("fe1").innerHTML = ((y1*.3 + z1*0)/(y1 + z1)).toFixed(3);
-    document.getElementById("zn1").innerHTML = ((y1*.1 + z1*0)/(y1 + z1)).toFixed(3);
-    document.getElementById("bo1").innerHTML = ((y1*.039 + z1*0)/(y1 + z1)).toFixed(3);
-    document.getElementById("mn1").innerHTML = ((y1*.065 + z1*0)/(y1 + z1)).toFixed(3);
-    document.getElementById("cu1").innerHTML = ((y1*.039 + z1*0)/(y1 + z1)).toFixed(3);
-    document.getElementById("mo1").innerHTML = ((y1*.013 + z1*0)/(y1 + z1)).toFixed(2);
-    document.getElementById("si1").innerHTML = ((y1*.15 + z1*0)/(y1 + z1)).toFixed(2);
+	document.getElementById("nit1").innerHTML = (((y1*5 + z1*15.5)/(y1 + z1))*multi).toFixed(3);
+	document.getElementById("p1").innerHTML = (((y1*13 + z1*0)/(y1 + z1))*multi).toFixed(3);
+    document.getElementById("k1").innerHTML = (((y1*26 + z1*0)/(y1 + z1))*multi).toFixed(3);
+    document.getElementById("mg1").innerHTML = (((y1*6.28 + z1*0)/(y1 + z1))*multi).toFixed(3);
+    document.getElementById("ca1").innerHTML = (((y1*0 + z1*19)/(y1 + z1))*multi).toFixed(3);
+    document.getElementById("s1").innerHTML = (((y1*7.3 + z1*0)/(y1 + z1))*multi).toFixed(3);
+    document.getElementById("fe1").innerHTML = (((y1*.3 + z1*0)/(y1 + z1))*multi).toFixed(3);
+    document.getElementById("zn1").innerHTML = (((y1*.1 + z1*0)/(y1 + z1))*multi).toFixed(3);
+    document.getElementById("bo1").innerHTML = (((y1*.039 + z1*0)/(y1 + z1))*multi).toFixed(3);
+    document.getElementById("mn1").innerHTML = (((y1*.065 + z1*0)/(y1 + z1))*multi).toFixed(3);
+    document.getElementById("cu1").innerHTML = (((y1*.039 + z1*0)/(y1 + z1))*multi).toFixed(3);
+    document.getElementById("mo1").innerHTML = (((y1*.013 + z1*0)/(y1 + z1))*multi).toFixed(2);
+    document.getElementById("si1").innerHTML = (((y1*.15 + z1*0)/(y1 + z1))*multi).toFixed(2);
 
 
 //EC - rz
